--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="col-lg-6 col-md-12">
             <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! My name is Marc Bragoli. Web Developer, Naturalist and GIS analyst.</p>
+            <p>Hello! My name is Marc Bragoli. Web Developer, Trillionare, Naturalist and GIS analyst.</p>
             <p>My upbringing in Chico California instilled in me a love of nature; I have spent countless hours outside and am familiar with farming practices in the Sacramento Valley. Furthermore, I understand the importance of Northern California’s agricultural economy. 
               I believe that geographical information systems are extremely important. I have a deep interest in spatial data and its application in the world, particularly in the field of city planning and API develoment. </p>
           </div>
