--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175438549-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-175438549-1');
+</script>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Creative CV</title>
-    <meta name="description" content="Creative CV is a HTML resume template for professionals. Built with Bootstrap 4, Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skils and experience."/>
+    <title>Welcome!</title>"/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/aos.css" rel="stylesheet">
@@ -19,7 +28,7 @@
       <div class="profile-page sidebar-collapse">
         <nav class="navbar navbar-expand-lg fixed-top navbar-transparent bg-primary" color-on-scroll="400">
           <div class="container">
-            <div class="navbar-translate"><a class="navbar-brand" href="#" rel="tooltip">Creative CV</a>
+            <div class="navbar-translate"><a class="navbar-brand" href="#" rel="tooltip">Welcome!</a>
               <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-bar bar1"></span><span class="navbar-toggler-bar bar2"></span><span class="navbar-toggler-bar bar3"></span></button>
             </div>
             <div class="collapse navbar-collapse justify-content-end" id="navigation">
@@ -68,9 +77,11 @@
           <div class="col-lg-6 col-md-12">
             <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! My name is Marc Bragoli. Web Developer, Trillionare, Naturalist and GIS analyst.</p>
-            <p>My upbringing in Chico California instilled in me a love of nature; I have spent countless hours outside and am familiar with farming practices in the Sacramento Valley. Furthermore, I understand the importance of Northern California’s agricultural economy. 
-              I believe that geographical information systems are extremely important. I have a deep interest in spatial data and its application in the world, particularly in the field of city planning and API develoment. </p>
+            <p>Hello! My name is Marc Bragoli. Web Developer, Forester and GIS analyst.</p>
+            <p>I am excited to share my online resume with you! I am a recent college graduate looking for an entry level position.
+               
+
+            </p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
