--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">ArcGIS Pro</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
               </div>
             </div>
           </div>
@@ -212,7 +212,7 @@
                   <figure class="cc-effect"><img src="images\GIS_work_flow.jpeg"  alt="Image"/><img src="images\GIS_project.jpeg" >
                     <figcaption>
                       <div class="h4">GIS Workflow and Project</div>
-                      <p>Web Development</p>
+                      <p>ArcPro</p>
                     
                   
                   </figure></a></div>
@@ -226,13 +226,13 @@
     <div class="h4 text-center mb-4 title">Work Experience</div>
     <div class="card">
       <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="col-md-3 bg-primary" >
           <div class="card-body cc-experience-header">
             <p>March 2016 - Present</p>
             <div class="h5">Ladder Canyon Ranch</div>
           </div>
         </div>
-        <div class="col-md-9" data-aos="fade-up" data-aos-offset="50" data-aos-duration="500">
+        <div class="col-md-9" >
           <div class="card-body">
             <div class="h5">Managment Consulting</div>
             <p>I had the oppritunity to apply my GIS skills in a land managment setting. The property is in south west colorado and is just under 3000 acres. The project involved identifying managment goals, giving reccomendations to reach managment objectives, and Using ESRI software to visualize data.  After working closly with the owners I compiled a list of suggestions based off of desired outcomes.</p>
@@ -242,13 +242,13 @@
     </div>
     <div class="card">
       <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-up" data-aos-offset="40" data-aos-duration="500">
+        <div class="col-md-3 bg-primary" >
           <div class="card-body cc-experience-header">
             <p>April 2014 - March 2016</p>
             <div class="h5">Vantage Sierra Cascade</div>
           </div>
         </div>
-        <div class="col-md-9" data-aos="fade-left" data-aos-offset="40" data-aos-duration="500">
+        <div class="col-md-9" >
           <div class="card-body">
             <div class="h5">Intern</div>
             <p>Vantage is a farming solutions company that distributes trimble products. During my time there I was able to gain an understanding of electrical and hydrolic systems.I became familiar with Trimbles products and how they are used. 
@@ -261,13 +261,13 @@
     <div class="card">
 
      <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-up" data-aos-offset="40" data-aos-duration="500">
+        <div class="col-md-3 bg-primary" >
           <div class="card-body cc-experience-header">
             <p>April 2013 - February 2014</p>
             <div class="h5">Anderson Bragoli Farms</div>
           </div>
         </div>
-        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+        <div class="col-md-9" >
           <div class="card-body">
             <div class="h5">Heavy eqipment operator</div>
             <p>I have experience with operating heavy equipment and managing irrigation for a production rice farm in northern califonia.
@@ -303,24 +303,7 @@
         </div>
       </div>
     </div>
-    <div class="card">
-      <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-education-header">
-            <p>2007 - 2009</p>
-            <div class="h5">High School</div>
-          </div>
-        </div>
-        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body">
-            <div class="h5">Science and Mathematics</div>
-            <p class="category">School of Secondary board</p>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+   
 
 <div class="section" id="reference">
 <div class="container cc-reference">
