--- a/index.html
+++ b/index.html
@@ -267,7 +267,8 @@
         <div class="col-md-9" >
           <div class="card-body">
             <div class="h5">Heavy eqipment operator</div>
-            <p>I have experience with operating heavy equipment and managing irrigation for a production rice farm in northern califonia.
+            <p>I have experience operating heavy equipment and managing irrigation for a production rice farm in northern California. I am familiar with landmanagment practices
+              and soil ammendments. 
                </p>
           </div>
         </div>
@@ -320,7 +321,7 @@
               <p class="category">ESRI / Certifications</p>
             </div>
             <div class="col-lg-10 col-md-9">
-              <p> To supplement my GIS course work I have attend many esri online learning workshops I have receaved multiple Certifications of compleation.</p>
+              <p> To supplement my GIS course work I have attend many esri online learning workshops I have receaved multiple Certifications of completion .</p>
             </div>
           </div>
         </div>
@@ -332,7 +333,7 @@
               <p class="category">UDEMY Web Development Bootcamp</p>
             </div>
             <div class="col-lg-10 col-md-9">
-              <p> I have sucseffuky compleated the UDEMY Web Development Bootcamp. During this course I learned to implemnt HTML, CSS, Bootstrap and JavaScript to design responsive website interfaces. I built APIS using JS.NODE and flask </p>
+              <p> I have sucseffuky compleated the UDEMY Web Development Bootcamp. During this course I learned to implemnt HTML, CSS, Bootstrap and JavaScript to design responsive website interfaces. I was expossed to API development using node.js and the express framework. </p>
             </div>
           </div>
         </div>
@@ -342,7 +343,6 @@
               <div class="h5 pt-2">Saiprasad G Palusa
               </div>
               <p class="category">Research Scientist 
-                <br>
                 Colorado State University</p>
             </div>
             <div class="col-lg-10 col-md-9">
@@ -356,9 +356,6 @@
 </div>
 </div>
 
-
-
-<!--EPL Soccer widget-->
 
 <div class="section" id="intrests"
  class="container">
