--- a/index.html
+++ b/index.html
@@ -232,7 +232,8 @@
         <div class="col-md-9" >
           <div class="card-body">
             <div class="h5">Managment Consulting</div>
-            <p>I had the oppritunity to apply my GIS skills in a land managment setting. The property is in south west colorado and is just under 3000 acres. The project involved identifying managment goals, giving reccomendations to reach managment objectives, and Using ESRI software to visualize data.  After working closly with the owners I compiled a list of suggestions based off of desired outcomes.</p>
+            <p>I had the oppritunity to apply my GIS skills in a land managment setting. The property is in south west colorado and is just under 3000 acres. The project involved identifying managment goals, and reccommending stratagies 
+               to reach them. After working closly with the owners I compiled a list of suggestions based off of desired outcomes.</p>
           </div>
         </div>
       </div>
@@ -248,8 +249,8 @@
         <div class="col-md-9" >
           <div class="card-body">
             <div class="h5">Intern</div>
-            <p>Vantage is a farming solutions company that distributes trimble products. During my time there I was able to gain an understanding of electrical and hydrolic systems.I became familiar with Trimbles products and how they are used. 
-               When not out on service calls I learned about product design and testing. I sucsefully embeded software onto micro controlers and monitored them remotly.  
+            <p>Vantage is a farming solutions company that distributes Trimble products. During my time there I was able to gain an understanding of electrical and hydrolic systems. I became familiar with Trimbles products and how they are used. 
+               When not out on service calls I learned about product design and testing. I Successfully embeded software onto micro controlers and monitored them remotly.  
               The data collected was then used to automate processes related to farming.  </p>
           </div>
         </div>
@@ -266,7 +267,7 @@
         </div>
         <div class="col-md-9" >
           <div class="card-body">
-            <div class="h5">Heavy eqipment operator</div>
+            <div class="h5">Heavy equipment operator</div>
             <p>I have experience operating heavy equipment and managing irrigation for a production rice farm in northern California. I am familiar with landmanagment practices
               and soil ammendments. 
                </p>
@@ -283,26 +284,26 @@
    
     <div class="card">
       <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+        <div class="col-md-3 bg-primary" >
           <div class="card-body cc-education-header">
             <p>2009 - 2013</p>
             <div class="h5">Bachelor's Degree</div>
           </div>
         </div>
-        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+        <div class="col-md-9" >
           <div class="card-body">
             <div class="h5">BS Natural Resource Managment</div>
             <p class="category">Colorado State University</p>
-            <p>I have a degree from the Warner College of Natural Sciences at Colorado State University. Throughout my coursework I have learned about restoration, conservation, carbon cap and trade and watershed science. I am able to apply statisticsl sampling to take inventroy of large
-              areas of land. 
+            <p>I have a degree from the Warner College of Natural Sciences at Colorado State University. Throughout my coursework I have learned about restoration, conservation, carbon accreditation and watershed science.
+               The coursework that pertained to my minor focused on statistical analysis to biological data.
+              
 
             </p>
           </div>
         </div>
       </div>
     </div>
-   
-
+  
 <div class="section" id="reference">
 <div class="container cc-reference">
   <div class="h4 mb-4 text-center title">Certifications and Reccomendations</div>
