--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+  <!--FAVICON 
+        PUBLIC "-//W3C//DTD HTML 4.01//EN"
+      "http://www.w3.org/TR/html4/strict.dtd">
+<html lang="en-US">
+<head profile="http://www.w3.org/2005/10/profile">
+<link rel="icon" 
+      type="image/png"  
+      href="'images\favicon-2.png'>
+    
+  
+  
+
+<link rel='icon' href='images\favicon-2.png' type='image/png' >
+  -->
+  
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175438549-1"></script>
 <script>
@@ -58,7 +73,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><img src="https://media-exp1.licdn.com/dms/image/C5603AQFpT5CGDMP82w/profile-displayphoto-shrink_400_400/0?e=1600300800&v=beta&t=vavTXkHyo8QQz_1HEuRN46Qiu30Ek4eNX_EeQrsKgfI" alt="Image"/></a></div>
           <div class="h2 title">Marc Bragoli</div>                                                                                                                                                                                                          <!-- attach resume to button -->
-          <p class="category text-white">Forester, GIS analyst, Web Developer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a> <button type=submit class="btn btn-primary" onclick=" window.open('/Users/marcobragoli/Documents/GitHub/bragoli.github.io/images/MBragoli_Resume2020.pdf'); return true;"> Resume </button></a>
+          <p class="category text-white">Forester, GIS analyst, Web Developer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a> <button type=submit class="btn btn-primary" onclick=" window.open('https://drive.google.com/file/d/11pLBj7pBuehm2pLO25XsA3E8xjjNVWSB/view?usp=sharing'); return true;"> Resume </button></a>
         </div>
       </div>
       
