--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url(https://images.unsplash.com/photo-1592425151373-2e6efff67107?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&q=60);"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><img src="https://media-exp1.licdn.com/dms/image/C5603AQFpT5CGDMP82w/profile-displayphoto-shrink_400_400/0?e=1600300800&v=beta&t=vavTXkHyo8QQz_1HEuRN46Qiu30Ek4eNX_EeQrsKgfI" alt="Image"/></a></div>
+          <div class="cc-profile-image"><img src="images\Profile.jpeg" alt="Image"/></a></div>
           <div class="h2 title">Marc Bragoli</div>                                                                                                                                                                                                          <!-- attach resume to button -->
           <p class="category text-white">Forester, GIS analyst, Web Developer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a> <button type=submit class="btn btn-primary" onclick=" window.open('https://drive.google.com/file/d/11pLBj7pBuehm2pLO25XsA3E8xjjNVWSB/view?usp=sharing'); return true;"> Resume </button></a>
         </div>
