--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-              <div class="col-sm-8">MarcBragoli@gmail.com</div>
+              <div class="col-sm-8">marcbragoli@gmail.com</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
@@ -251,7 +251,7 @@
              <div class="card-body">
                <div class="h5">Intern</div>
                <p> My current internship at the Geospatial Centroid has allowed me to gain experience working within a team to meet project deadlines while conducting detail-oriented data analysis. 
-                 I have Successfully automated spatial analyses using python and the arcpy library. I have become comfotrable with working remotly while still staying highly productive.
+                 I have successfully automated spatial analyses using python and the arcpy library. I have become comfortable with working remotely while still staying highly productive.
                   </p>
              </div>
            </div>
@@ -268,8 +268,8 @@
         </div>
         <div class="col-md-9" >
           <div class="card-body">
-            <div class="h5">Managment Consulting</div>
-            <p>I had the oppritunity to apply my GIS skills in a land managment setting. The property is in south west colorado and is just under 3000 acres. The project involved identifying managment goals,
+            <div class="h5">Management Consulting</div>
+            <p>I had the oppritunity to apply my GIS skills in a land management setting. The property is in south west colorado and is just under 3000 acres. The project involved identifying management goals,
                and recommending stratagies to reach them. After working closly with the owners I compiled a list of suggestions based off of desired outcomes.</p>
           </div>
         </div>
@@ -287,7 +287,7 @@
           <div class="card-body">
             <div class="h5">Intern</div>
             <p>Vantage is a farming solutions company that distributes Trimble products. During my time there I was able to gain an understanding of electrical and hydrolic systems. I became familiar with Trimbles products and how they are used. 
-               When not out on service calls I learned about product design and testing. I Successfully embeded software onto micro controlers and monitored them remotly.  
+               When not out on service calls I learned about product design and testing. I successfully embeded software onto micro controlers and monitored them remotely.  
               The data collected was then used to automate processes related to farming.  </p>
           </div>
         </div>
@@ -305,7 +305,7 @@
         <div class="col-md-9" >
           <div class="card-body">
             <div class="h5">Heavy equipment operator</div>
-            <p>I have experience operating heavy equipment and managing irrigation for a production rice farm in northern California. I am familiar with landmanagment practices
+            <p>I have experience operating heavy equipment and managing irrigation for a production rice farm in northern California. I am familiar with land management practices
               and soil ammendments. 
                </p>
           </div>
@@ -331,7 +331,7 @@
         </div>
         <div class="col-md-9" >
           <div class="card-body">
-            <div class="h5">BS Natural Resource Managment</div>
+            <div class="h5">BS Natural Resource Management</div>
             <p class="category">Colorado State University</p>
             <p>I have a degree from the Warner College of Natural Sciences at Colorado State University. Throughout my coursework I have learned about restoration, conservation, carbon accreditation and watershed science.
                The coursework that pertained to my minor focused on statistical analysis to biological data.
@@ -343,15 +343,15 @@
       </div>
     </div>
   
-<div class="section" id="intrests"
+<div class="section" id="interests"
  class="container">
-  <div class="h3 text-center mb-4 title">Personal Intrests</div>
+  <div class="h3 text-center mb-4 title">Personal Interests</div>
   <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
       <div class="card-body">
           
               <div class="row">
                 <div class="col-sm">
-                    <h2>Professional Intrests</h2>
+                    <h2>Professional Interests</h2>
                   <li> Remote Sensing</li>
                  <li>DGPS</li>
                  <li>Agriculture</li>
@@ -360,7 +360,7 @@
                 </div>
                 <div class="col-sm">
           
-                <h2>Personal Intrests</h2>
+                <h2>Personal Interests</h2>
                <li>Music</li>
                <li>Backpacking</li>
                <li>Travel</li>
