--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         <div class="col-md-9" >
           <div class="card-body">
             <div class="h5">Management Consulting</div>
-            <p>I had the oppritunity to apply my GIS skills in a land management setting. The property is in south west colorado and is just under 3000 acres. The project involved identifying management goals,
+            <p>I had the oppritunity to apply my GIS skills in a land management setting. The property is in southwest Colorado and is just under 3000 acres. The project involved identifying management goals,
                and recommending stratagies to reach them. After working closly with the owners I compiled a list of suggestions based off of desired outcomes.</p>
           </div>
         </div>
@@ -286,8 +286,8 @@
         <div class="col-md-9" >
           <div class="card-body">
             <div class="h5">Intern</div>
-            <p>Vantage is a farming solutions company that distributes Trimble products. During my time there I was able to gain an understanding of electrical and hydrolic systems. I became familiar with Trimbles products and how they are used. 
-               When not out on service calls I learned about product design and testing. I successfully embeded software onto micro controlers and monitored them remotely.  
+            <p>Vantage is a farming solutions company that distributes Trimble products. During my time there I was able to gain an understanding of electrical and hydraulic systems. I became familiar with Trimbles products and how they are used. 
+               When not out on service calls I learned about product design and testing. I successfully embeded software onto micro controllers and monitored them remotely.  
               The data collected was then used to automate processes related to farming.  </p>
           </div>
         </div>
@@ -304,8 +304,8 @@
         </div>
         <div class="col-md-9" >
           <div class="card-body">
-            <div class="h5">Heavy equipment operator</div>
-            <p>I have experience operating heavy equipment and managing irrigation for a production rice farm in northern California. I am familiar with land management practices
+            <div class="h5">Heavy Equipment Operator</div>
+            <p>I have experience operating heavy equipment and managing irrigation for a production rice farm in Northern California. I am familiar with land management practices
               and soil ammendments. 
                </p>
           </div>
