--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><img src="images\Profilepic.jpeg" alt="Image"/></a></div>
           <div class="h2 title">Marc Bragoli</div>                                                                                                                                                                                                          <!-- attach resume to button -->
-          <p class="category text-white">Forester, GIS Analyst, Data Manager</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a> <button type=submit class="btn btn-primary" onclick=" window.open('https://docs.google.com/document/d/1JtbCnfrWu73uxqG-0CNRP1a4OrvDs8fJ-olpEnJcpas/edit?usp=sharing'); return true;"> Resume </button></a>
+          <p class="category text-white">Forester, GIS Analyst, Data Manager</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contact</a> <button type=submit class="btn btn-primary" onclick=" window.open('https://docs.google.com/document/d/1JtbCnfrWu73uxqG-0CNRP1a4OrvDs8fJ-olpEnJcpas/edit?usp=sharing'); return true;"> Resume </button></a>
         </div>
       </div>
       
@@ -308,9 +308,9 @@
         <div class="col-md-9" >
           <div class="card-body">
             <div class="h5">Intern</div>
-            <p>Vantage is a farming solutions company that distributes Trimble products. During my time there I was able to gain an understanding of electrical and hydraulic systems. I became familiar with Trimbles products and how they are used. 
-               When not out on service calls I learned about product design and testing. I successfully embeded software onto micro-controllers and monitored them remotely.  
-              The data collected was then used to automate processes related to farming.</p>
+            <p>Vantage is a farming solutions company that distributes Trimble products. During my time there I was able to gain an understanding of electrical and hydraulic systems. 
+              I became familiar with Trimble's products and their applications. When not out on service calls I learned about product design and testing. A key accomplishment was successfully 
+              embedding software onto micro-controllers and monitored them remotely. The data collected was then used to automate processes related to farming.</p>
           </div>
         </div>
       </div>
@@ -332,7 +332,8 @@
         </div>
         <div class="col-md-9" >
           <div class="card-body">
-            <div class="h5">BS Natural Resource Management</div>
+            <div class="h5">B.S. Natural Resource Management</div>
+            <div class="h6">Minor in Forestry</div>
             <p class="category">Colorado State University</p>
             <p>I have a degree from the Warner College of Natural Sciences at Colorado State University. Throughout my coursework I have learned about restoration, conservation, carbon accreditation and watershed science.
                The coursework that pertained to my minor focused on statistical analysis to biological data.
