--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-US">
   <head>
   <!--FAVICON 
@@ -219,10 +219,10 @@
             </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images\cert.jpeg"  alt="Image"/><img src="cert.jpeg" >
+                  <figure class="cc-effect"><img src="images\ISA_Cert.jpeg"  alt="Image"/> 
                     <figcaption>
-                      <div class="h4">FEMA Incident Command</div>
-                      <p>IS-00100</p>
+                      <div class="h4">ISA Certified Arborist</div>
+                      <p>TRAQ Arborist</p>
                     </figcaption>
                   </figure></a></div>
                
@@ -245,6 +245,8 @@
                             </figcaption>
                           </figure></a></div>
                         </div>
+
+
                 
                 <div class="col-md-6">
                   <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
