--- a/index.html
+++ b/index.html
@@ -282,16 +282,18 @@
         <div class="row">
            <div class="col-md-3 bg-primary" >
              <div class="card-body cc-experience-header">
-               <p>January 2021 - Present</p>
+               <p>December 2020 - Present</p>
                <div class="h5">Tetra Tech</div>
              </div>
            </div>
            <div class="col-md-9" >
              <div class="card-body">
                <div class="h5">GIS Professional</div>
-               <p> My duties as a GIS professional for the Northern Branch Hazardous Tree Project include data acquisition, preparation and analysis. I am responsible for managing multiple databases. 
-                 I create maps using data driven pages to visualize hazardous trees on properties effected by the wildfires in Northern California. 
-                  </p>
+               <p>
+                   2020-2021 California Wildfires: Tetra Tech is the monitoring and assessment contractor for CalRecycle and CalOES. I have been responsible for maintaining communication with state and county representatives regarding planning objectives and project scope. I manage client portals and Power Bi Dashboards.
+                   I serve as the lead GIS analyst representative for Tetra Tech when fulfilling request from CalRecycle and Cal OES. 
+
+               </p>
              </div>
            </div>
          </div>
@@ -308,9 +310,9 @@
         <div class="col-md-9" >
           <div class="card-body">
             <div class="h5">Analyst</div>
-            <p> My internship at the Geospatial Centroid allowed me to gain experience working within a team to meet project deadlines while conducting detail-oriented data analysis.
-                 I have become comfortable with working remotely while still staying highly productive.
-                 </p>
+            <p>
+                State funded research and analysis projects are carried out by interns with guidance from PhD candidates and professors of computer science, natural science and landscape architecture. I was able to gain professional experience in a collaborative environment while developing my technical abilities.
+            </p>
           </div>
         </div>
       </div>
@@ -354,7 +356,7 @@
             <div class="h6">Minor in Forestry</div>
             <p class="category">Colorado State University</p>
             <p>I have a degree from the Warner College of Natural Sciences at Colorado State University. Throughout my coursework I have learned about restoration, conservation, carbon accreditation and watershed science.
-               The coursework that pertained to my minor focused on statistical analysis to biological data.
+               The coursework that pertained to my minor focused on statistical analysis of biological data.
               
 
             </p>
