--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 ml-auto mr-auto">
-        <div class="h4 text-center mb-4 title">Portfolio</div>
+        <div class="h4 text-center mb-4 title">GIS Portfolio</div>
         <div class="nav-align-center">
           <ul class="nav nav-pills nav-pills-primary" role="tablist">
             <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#web-development" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li>
@@ -208,10 +208,10 @@
             <div class="col-md-6">
               <div class="cc-porfolio-image " data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                                                 <!--Hazwoper-->
-                <figure class="cc-effect"><img src="images\HAZ.jpeg" alt="Image"/>
+                <figure class="cc-effect"><img src="images\Model_Builder.JPG" alt="Image"/>
                     <figcaption>
-                      <div class="h4">HAZWOPER</div>
-                      <p>OSHA</p>
+                      <div class="h4">Arcpy</div>
+                      <p>While at Tetra Tech I have been encouraged to automate repetitive tasks. I have constructed models to run tools in sequence in order help speed up map production and analysis. These models have reenforced my knowledge of python and the arcpy library by allowing me to visualize inputs, functions and parameters using the graphical user interface. I have written multiple scripts that can be ran from Arc Catalog. These scripts are to be used in tandem with excel spreadsheets to pass in inputs and keep track of QC and production metrics. </p>
                 
 
                     </figcaption>
@@ -219,10 +219,10 @@
             </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images\ISA_Cert.jpeg"  alt="Image"/> 
+                  <figure class="cc-effect"><img src="images\ARC_Scene.JPG"  alt="Image"/> 
                     <figcaption>
-                      <div class="h4">ISA Certified Arborist</div>
-                      <p>TRAQ Arborist</p>
+                      <div class="h4">Raster Data</div>
+                      <p>I have worked extensively with DEM files for use in watershed delineations as part of my GIS coursework in college. I am able to visualize this data in Arc scene. My introduction to analysis using raster files helped broaden my understanding of the applications of Geospatial Data.</p>
                     </figcaption>
                   </figure></a></div>
                
@@ -232,7 +232,7 @@
                       <figure class="cc-effect"><img src="images\PYCERT.jpeg"  alt="Image"/>
                         <figcaption>
                           <div class="h4">ESRI</div>
-                          <p>Python Course</p>
+                          <p>I enjoy the learning process and am excited at the prospect of learning new skills. I have received multiple ESRI certifications. And am hoping to obtain my GISP certification.</p>
                         </figcaption>
                       </figure></a></div> 
                    </div>
@@ -240,8 +240,9 @@
                       <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                           <figure class="cc-effect"><img src="images\DataDriven.jpeg"  alt="Image"/>
                             <figcaption>
-                              <div class="h4">Data Driven Pages</div>
-                              <p>ArcPro</p>
+                              <div class="h4">Visualization Products</div>
+                              <p>I have been responsible for making multiple geospatial data visualization products for use by Tetra Tech’s clients, EMI staff and TDR staff. I enjoy the designing layouts to clearly highlight the area of interest and pride myself with the ability to make useful and aesthetically pleasing maps. 
+                              </p>
                             </figcaption>
                           </figure></a></div>
                         </div>
@@ -253,7 +254,7 @@
                       <figure class="cc-effect"><img src="images\FireMap.jpeg"  alt="Image"/>
                         <figcaption>
                           <div class="h4">Supervised Calssification</div>
-                          <p>Berry Creek Fire Scar</p>
+                          <p>My participation in the UN Secondary Cities project enabled me to run supervised classifications on high resolution satellite imagery to monitor geographical growth of multiple cities in developing nations. I was able to apply this knowledge to my current position by creating shape files of multiple burn scars in Northern California. These shapefiles were then used to define projects scope and determine areas of interest. </p>
                         </figcaption>
                       </figure></a></div>
                     </div>
@@ -261,8 +262,8 @@
                       <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                           <figure class="cc-effect"><img src="images\FVS.jpeg"  alt="Image"/>
                             <figcaption>
-                              <div class="h4">Forest Vegetation Simulator</div>
-                              <p>Growth and Yield Modeling</p>
+                              <div class="h4">Geospatial Software</div>
+                              <p>I am familiar with other GIS software including QGIS, Google Earth Engine and FVS. My background in forestry and biometry has allowed me to experiment with statistical models to make assumptions about large natural areas using metrics of forest structure. These models require Geospatial elements be taken into consideration. The field of Carbon accreditation and environmental modeling excite me and drive me to pursue a career in GIS. </p>
                             </figcaption>
                           </figure></a></div>
             </div>
