--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <div class="col-md-6">
               <div class="cc-porfolio-image " data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                                                 <!--Hazwoper-->
-                <figure class="cc-effect"><img src="images\2025Mar1633293677-2.JPG" alt="Image"/>
+                <figure class="cc-effect"><img src="images\FAACERT.jpg" alt="Image"/>
                     <figcaption>
                       <div class="h4">Part 107</div>
                       <p>I have over 50 hours of drone flight time surveying power lines in Northern California. I worked for a subcontractor supporting PG&E’s vegetation management program, where I conducted aerial inspections to help identify potential hazards and ensure regulatory compliance. 
